Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-5963

wrong hashing in LU-4647

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Blocker Blocker
    • Lustre 2.7.0
    • Lustre 2.7.0
    • master from now.
    • 3
    • 16655

      Sometimes recovery-small tests 50-52 failed on 8 CPU box. with leak a export reference. After some investigation i see nodemap don't able to found own entry for an export, but export still linked to node map. (i don't know why intel land something without any debug options in code?). per additional investigation i see someone

      commit 83f04354ff68a14d7492e35a9576c91492a1206c
      Author: Joshua Walgenbach <jjw@iu.edu>
      Date: Mon Mar 3 09:10:20 2014 +0100

      LU-4647 nodemap: add mapping functional
      Signed-off-by: Joshua Walgenbach <jjw@iu.edu>
      Signed-off-by: Kit Westneat <kit.westneat@gmail.com>
      Reviewed-on: http://review.whamcloud.com/9299
      Tested-by: Jenkins
      Reviewed-by: Andreas Dilger <andreas.dilger@intel.com>
      Reviewed-by: Nathaniel Clark <nathaniel.l.clark@intel.com>

      have a bad inspection and allow to "hash" an export pointer as string.
      so if any byte will be changed in export after add - we don't able to find something in hash.

            utopiabound Nathaniel Clark
            shadow Alexey Lyashkov
            Votes:
            0 Vote for this issue
            Watchers:
            5 Start watching this issue

              Created:
              Updated:
              Resolved: